tests/parsing/smtlib/mcil/errors/224_define-system_bad_input_list.mcil
(define-system sys :input (Int))